[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"
authors = ["Atif Mahmud <atifmahmud101@gmail.com>"]
license = "BSD-2-Clause"

[build-dependencies]
flawless-utils = "1.0.0-beta.1"

[dependencies]
flawless-utils = "1.0.0-beta.1"
log = "0.4"
pong = { path = "./workflows/pong" }
reqwest = "0.12.8"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
